

<resources>
    <string name="app_name">OnlineCourierApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="clear">Clear</string>

    <color name="black">#000000</color>
    <color name="white">#ffffff</color>

    <string name="newaccount">SignUp</string>
    <string name="title">Online Courier</string>

    <color name="red">#d43f3a</color>

    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="signin">SignIn</string>
    <string name="sigindetails">SigIn User Details</string>
    <string name="fullname">Full Name</string>
    <string name="age">Age</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="phoneno">Phoneno</string>
    <string name="courier">Courier Logo</string>
    <string name="loginscreen">User Login Screen</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="prev">Prev</string>
    <string name="logout">Signout</string>
    <string name="next">Next</string>
    <string name="userdetails">User Details</string>
    <string name="edit">Edit</string>
    <string name="todo">TODO</string>
    <string name="title_activity_view_order">ViewOrderActivity</string>
    <string name="title_activity_user_details">UserDetailsActivity</string>
    <string name="menu">Menu</string>
    <string name="neworder">New Order</string>
    <string name="addnew">Add New Order</string>
    <string name="viewneworder">View New Order</string>
    <string name="ordertracking">Track</string>
    <string name="searchOrder">Search</string>
    <string name="title_activity_order_home">OrderHomeActivity</string>
    <string name="order">Orders</string>
    <string name="pickuplocation">Pick Up Location</string>
    <string name="pickupcustomername">Pick Up Customer Name</string>
    <string name="pickupphoneno">Pick Up Phone No</string>
    <string name="pickuptime">Pick Up Time</string>
    <string name="cashondelivery">Cash On Delivery</string>
    <string name="yes">Yes</string>
    <string name="readytime">Ready Time</string>
    <string name="reference">Reference</string>
    <string name="insuranceno">InsuranceNo</string>
    <string name="quantity">Quantity</string>
    <string name="packingtime">Packing Time</string>
    <string name="weight">Weight</string>
    <string name="length">Length</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="servicecharge">Service Charge</string>
    <string name="baseamount">Base Amount</string>
    <string name="totalamount">Total Amount</string>
    <string name="packagecharge">Package Charge</string>
    <string name="orderdeddate">Orderded Date</string>
    <string name="add">Add</string>
    <string name="street">Street</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="pincode">Postal/Zip code</string>
    <string name="city">City</string>
    <string name="insurance">Insurance</string>
    <string name="conformpassword">Conform Password</string>
    <string name="rememberme">Remember Me</string>
    <string name="exit">Exit</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="mainmenu">Main Menu</string>
    <string name="register">Register</string>
    <string name="administrator">Administrator</string>
    <string name="image">image</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="area">Area</string>
    <string name="landlineno">Landline No</string>
    <string name="mobileno">Mobile No</string>
    <string name="title_activity_sign_credentials">SignCredentialsActivity</string>
    <string name="clickhere">Click Here For Terms And Conditions</string>
    <string name="iagree">I Agree</string>
    <string name="idisagree">I Disagree</string>
    <string name="parceldetails">Parcel Details</string>
    <string name="Pickupaddress">Pick Up Address</string>
    <string name="title_activity_order_home_delivery">OrderHomeDeliveryActivity</string>
    <string name="deliveryaddress">Delivery Address</string>
    <string name="title_activity_order_home_orders">OrderHomeOrdersActivity</string>
    <string name="orderno">Your Order Number</string>
    <string name="pickupdate">Pick Up Date</string>
    <string name="time">Time</string>
    <string name="servicetype">Service type (direct /overnight)</string>
    <string name="orderinfo">Order Information</string>

    <string-array name="date">

        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="year">
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item >2020</item>
    </string-array><string-array name="month">
    <item>Mar</item>
    <item>Apr</item>
    <item>May</item>
    <item>Jun</item>
    <item>Jul</item>
    <item>Aug</item>
    <item>Sep</item>
    <item>Oct</item>
    <item>Nov</item>
    <item>Dec</item>
</string-array>

    <string-array name="time">
        <item>12.00 AM</item>
        <item>01.00 AM</item>
        <item>02.00 AM</item>
        <item>03.00 AM</item>
        <item>04.00 AM</item>
        <item>05.00 AM</item>
        <item>06.00 AM</item>
        <item>07.00 AM</item>
        <item>08.00 AM</item>
        <item>09.00 AM</item>
        <item>10.00 AM</item>
        <item>11.00 AM</item>
        <item>12.00 PM</item>
        <item>01.00 PM</item>
        <item>02.00 PM</item>
        <item>03.00 PM</item>
        <item>04.00 PM</item>
        <item>05.00 PM</item>
        <item>06.00 PM</item>
        <item>07.00 PM</item>
        <item>08.00 PM</item>
        <item>09.00 PM</item>
        <item>10.00 PM</item>
        <item>11.00 PM</item>
    </string-array>

    <string name="title_activity_order_home_package_details">OrderHomePackageDetailsActivity</string>
    <string name="pack">Package Details</string>

    <string-array name="packtype">
        <item>Fragile</item>
        <item>Non-Fragile</item>
    </string-array>

    <string-array name="charges">
        <item>Within_Karnataka_Rs_100</item>
        <item>OutsideKarnataka_Rs_200</item>
        <item>South_India_Rs_300</item>
        <item>North_India_Rs_400</item>

    </string-array>

    <string-array name="sat">
        <item>Not_Picked</item>
        <item>Picked</item><item>Packaged</item>
        <item>Dispatched</item>
        <item>Delivered</item>
        <item >Not Delivered</item>
        <item >Cancelled</item>
    </string-array>

    <string name="title_activity_order__home__review_order">Order_Home_ReviewOrderActivity</string>
    <string name="review">Review Order</string>
    <string name="charges">Charges</string>
    <string name="title_activity_final_order">FinalOrderActivity</string>
    <string name="finalorder">Final Order</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="ordernos">Order No</string>
    <string name="finish">Finish</string>
    <string name="back">Back</string>
    <string name="title_activity_track">TrackActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="trackingsystem">Tracking System</string>
    <string name="enteryourorderno">Enter Your Order Number</string>
    <string name="continueform">Continue</string>
    <string name="orderedunder">Ordered Under The Mail Address</string>
    <string name="searching">Searching System</string>
    <string name="title_activity_admin_login">AdminLoginActivity</string>
    <string name="adminloginscreen">Admin Login Screen</string>
    <string name="title_activity_admin_home">AdminHomeActivity</string>
    <string name="status">Status</string>
    <string name="changestatus">Change Status</string>

</resources>
